# Production-Grade-Backend

./: .env.sample  LICENSE  README.md  alembic.ini  dev.db  docker-compose.yml  dockerfile  pyproject.toml
.devcontainer/: devcontainer.json
alembic/: env.py
app/: main.py  router.py
app/core/: config.py  database.py
app/modules/auth/: router.py
app/modules/users/: router.py
src/: dependencies.py  exceptions.py  main.py  router.py
src/constants/: enums.py
src/core/: database.py  device_fingerprint.py  logger.py  middleware.py  security.py
src/modules/auth/: dependencies.py  model.py  repo.py  router.py  schema.py  service.py
src/modules/users/: dependencies.py  model.py  repo.py  router.py  schema.py  service.py
src/utils/: pagination.py  response.py  validators.py
tests/: conftest.py
tests/test_auth/: test_auth_router.py
tests/test_users/: test_user_router.py
