[project]
name = "production-grade-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "annotated-doc>=0.0.4",
    "annotated-types>=0.7.0",
    "anyio>=4.13.0",
    "apscheduler>=3.11.2",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "black>=26.5.1",
    "cachetools>=7.1.2",
    "click>=8.4.0",
    "colorama>=0.4.6",
    "dnspython>=2.8.0",
    "email-validator>=2.3.0",
    "fastapi>=0.136.1",
    "greenlet>=3.5.0",
    "h11>=0.16.0",
    "httptools>=0.7.1",
    "httpx>=0.28.1",
    "idna>=3.15",
    "loguru>=0.7.3",
    "orjson>=3.11.9",
    "passlib>=1.7.4",
    "pydantic>=2.13.4",
    "pydantic-core>=2.46.4",
    "pydantic-settings>=2.14.1",
    "pyjwt>=2.13.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "requests>=2.34.2",
    "ruff>=0.15.15",
    "sqlalchemy>=2.0.49",
    "starlette>=1.0.0",
    "typing-extensions>=4.15.0",
    "typing-inspection>=0.4.2",
    "uvicorn[standard]>=0.47.0",
    "watchfiles>=1.1.1",
    "websockets>=16.0",
]
